force-app/main/default/objects/Exclusions_Status_Detail__x/Exclusions_Status_Detail__x.object-meta.xml
<CustomObject>
    <externalDataSource>Cosmos_DB</externalDataSource>
    <externalName>Exclusions Details</externalName>
    <label>Exclusions Status Detail</label>
    <pluralLabel>Exclusions Status Details</pluralLabel>
</CustomObject>