force-app/main/default/objects/Exclusions_Status_Detail__x/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <externalDeveloperName>description</externalDeveloperName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>