force-app/main/default/objects/Exclusions_Status_Detail__x/fields/issuedDateTime__c.field-meta.xml
<CustomField>
    <fullName>issuedDateTime__c</fullName>
    <externalDeveloperName>issuedDateTime</externalDeveloperName>
    <label>Issued Date</label>
    <type>DateTime</type>
</CustomField>