force-app/main/default/objects/Exclusions_Status_Detail__x/fields/POENumber__c.field-meta.xml
<CustomField>
    <fullName>POENumber__c</fullName>
    <label>POE Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>