force-app/main/default/objects/Exclusions_Status_Detail__x/fields/propertyName__c.field-meta.xml
<CustomField>
    <fullName>propertyName__c</fullName>
    <externalDeveloperName>propertyName</externalDeveloperName>
    <label>Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>