force-app/main/default/objects/Exclusions_Status_Detail__x/fields/SalesforceContactId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceContactId__c</fullName>
    <label>SalesforceContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>