force-app/main/default/objects/Exclusions_Status_Detail__x/fields/statusType__c.field-meta.xml
<CustomField>
    <fullName>statusType__c</fullName>
    <externalDeveloperName>statusType</externalDeveloperName>
    <label>Status Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>