force-app/main/default/objects/Exclusions_Status_Detail__x/fields/subtypeDescription__c.field-meta.xml
<CustomField>
    <fullName>subtypeDescription__c</fullName>
    <externalDeveloperName>subtypeDescription</externalDeveloperName>
    <label>Length</label>
    <length>255</length>
    <type>Text</type>
</CustomField>