force-app/main/default/objects/Exclusions_Status_Detail__x/fields/typeDescription__c.field-meta.xml
<CustomField>
    <fullName>typeDescription__c</fullName>
    <externalDeveloperName>typeDescription</externalDeveloperName>
    <label>Behavior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>